tests/baselines/reference/declarationWithNoInitializer.errors.txt
declarationWithNoInitializer.ts(1,5): error TS1182: A destructuring declaration must have an initializer.
declarationWithNoInitializer.ts(2,5): error TS1182: A destructuring declaration must have an initializer.


==== declarationWithNoInitializer.ts (2 errors) ====
    var [a, b];          // Error, no initializer
        ~~~~~~
!!! error TS1182: A destructuring declaration must have an initializer.
    var {c, d};          // Error, no initializer
        ~~~~~~
!!! error TS1182: A destructuring declaration must have an initializer.
    